# trunk-compress-template

./: .gitignore  Cargo.toml  README.md  Trunk.toml  cargo-generate.toml  install.sh
.github/workflows/: pr_check.yml
backend/: Cargo.toml  build.rs
backend/src/: main.rs  yew.rs
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  lib.rs  main.rs
frontend/tests/: wasm.rs
