[package]
name = "frontend"
version = "0.1.0"
edition = "2024"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tracing-subscriber = "0.3.19"
tracing-web = "0.1.3"
tracing = "0.1.41"
serde-wasm-bindgen = "0.6.5"
yew = { workspace=true, features=["csr"] }
bounce = { version = "0.9.0", features = ["query"] }
web-sys = { version = "0.3.70", features = ["HtmlInputElement", "Element", "DomRect", "Window", "Clipboard"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
gloo-net = "0.6.0"
js-sys = "0.3.70"
yew-html-ext = "0.2.0"
stylist = { workspace=true, features = ["yew_integration"] }
async-trait = "0.1.86"

yew-hooks = "0.3.3"
yew-autoprops = "0.4.1"
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0.139"

dev-reload = { git = "https://github.com/Madoshakalaka/trunk-compress", tag="v0.1.5"}

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
tokio = { version = "1.43", features = ["macros"] }
